--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "pegman",
   "version": "0.1.0",
   "scripts": {
-    "start": "node ./bin/server.js"
+    "start": "node ./bin/server.js",
+    "test": "./node_modules/.bin/mocha test/"
   },
   "dependencies": {
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   }
 }
